objects/FSLABB_AssetUpdate__e.object
<CustomObject>
    <description>FSL Updates to Asset records that need to be propagated to ServIS via Mulesoft.</description>
    <fields>
        <fullName>FSLABB_ChangedFieldValues__c</fullName>
        <description>FSL Values of changed fields. Same sequence as ChangedFields.</description>
        <label>Changed Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSLABB_ChangedFields__c</fullName>
        <description>FSL Fields on the Asset record that changed.</description>
        <label>Changed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSLABB_Operation__c</fullName>
        <label>Operation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_ServISId__c</fullName>
        <description>FSL Id of the Installation in ServIS.</description>
        <label>ServIS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SystemGARId__c</fullName>
        <label>GAR Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_UserFederationId__c</fullName>
        <label>Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Asset Update</label>
    <pluralLabel>FSL Asset Updates</pluralLabel>
</CustomObject>